modified:   index.html 	modified:   menu.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>CCI Student</title>
+  <title>Marissa Beaty</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
@@ -36,13 +36,13 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <img class="image" id="me" src="img/me.png">
+            <img class="image" id="me" src="img/IMG_0532.jpeg">
           </div>
           <div class="flex-item flex-column">
-            <h2>CCI Student</h2>
+            <h2>Marissa Beaty</h2>
             <p class="text">
               Looking for work!<br>
-              cci.student (at) gmail.com<br>
+              marissabeaty2@gmail.com<br>
            </p>
           </div>
         </div>
@@ -51,13 +51,13 @@
             <h2>Biography</h2>
             <hr>
             <p class="text">
-              I am a current student at the UAL Creative Computing Institute studying on the MSc Data Science and AI for the Creative Industries. I previously used to work as a graphic designer.
-              <b>I am passionate about data science, NLP, and the possibilities for using them for new creative experiences.</b> In my spare time I enjoy rock climbing and knitting!
+              As a current student at UAL's Creative Computing Institute pursuing my MSc in Data Science and AI, I am immersed in the exciting sector of technology bridging the gap between creative thinking and technical solutions. With a diverse background spanning program management, technology consulting, and magazine editing, I have cultivated a unique skill set preparing me to uncover and communicate innovative solutions to complex technical problems. When I'm not delving into data or exploring AI algorithms, I find solace in learning about space, spending time outdoors, and finding creative fulfillment in baking and knitting. 
             </p>
             <h3>Table of Content</h3>
             <ul>
               <li><a href="#Education">Education</a></li>
               <li><a href="#Employment">Employment</a></li>
+              <li><a href="#Technical">Technical Skills</a></li>
               <li><a href="#project">Projects</a></li>
               <li><a href="#award">Awards and Honors</a></li>
               <li><a href="#hobbies">Hobbies</a></li>
@@ -65,26 +65,44 @@
             <h2 id="project">Education</h2>
             <hr>
             <li><b>MSc Data Science and AI for the Creative Industries</b>, UAL Creative Computing Institute, London, September 2022 - Present.</li>
-            <li><b>BA Graphic Design</b>, Teeside University, Middlesbrough, September 2016 - May 2019.</li>
+            <li><b>BA Art History, BA English Literature</b>, University of Wisconsin - Madison, Madison, WI, September 2016 - May 2020.</li>
             <h2 id="project">Employment</h2>
             <hr>
-            <li><b>Graphic Designer</b>, Moonfish, Gateshead, January 2020 - May 2022.</li>
-            <li><b>Social media Coordiator</b>, Moosefest, Middlesbrough, June 2019 - December 2019.</li>
-            <li><b>Social media Internship</b>, Moosefest, Middlesbrough, May 2018 - August 2018.</li>
+            <li><b>Program Coordinator</b>, South Asia Summer Language Institute, Madison, WI, March 2019 - August 2022.</li>
+            <li><b>Hex-U Fellow</b>, Community Literacy Project, Kickapoo Valley, WI, January 2020 - May 2022.</li>
+            <li><b>Curatorial Intern</b>, Madison Museum of Contemporary Art, Madison, WI, January 2020 - May 2020.</li>
+            <li><b>Digital Editor & Staff Writer</b>, Illumination Journal, The Dish Magazine, & The Daily Cardinal, Madison, WI, September 2017 - May 2020.</li>
+            <li><b>Information Technology Consultant</b>, UW-Madison, Madison, WI, March 2018 - October 2018.</li>
+            <h2 id="Technical">Technical Skills</h2>
+            <hr>
+            <li><b>Python:</b> Pandas, Sklearn, NumPy, Keras, Tensorflow, querying in SQL</li>
+            <li><b>Data Visualization:<b> Matplot, Plotly, Tableau</li>
+            <li><b>Data Collation and Processing:<b> CMS Management, Google Cloud Platform, Excel</li>
+            <li><b>User Experience:<b> Google Analytics, Google Trends, Figma, Adobe Creative Cloud</li>  
             <h2 id="project">Projects</h2>
             <hr>
-            <li><b>Text classification of poems</b>, 2022, Code: <a href= "https://github.com/cci-student/NLP-project">https://github.com/cci-student/NLP-project</li></a>
-            <li><b>BuscuitGAN</b> - A GAN trained on a custom dataset of buscuits, 2023, Code: <a href= "https://github.com/cci-student/Buscuit-GAN">https://github.com/cci-student/Buscuit-GAN</li></a>
+            <li><b>Thesis (completion in September '23): Environmental Modelling for Predictive Climate Solutions</b>, 2023</li></a>
+            <li><b>Creating Photorealistic Architectural Images from sketches using CycleGAN</b> - A CycleGAN trained on a custom dataset of paired architectural sketches and photographs, 2023, Code: <a href= "https://github.com/mbeaty2/Artificial-Intelligence-for-the-Media-Mini-Project">https://github.com/mbeaty2/Artificial-Intelligence-for-the-Media-Mini-Project</li></a>
+            <li><b>K-Means Clustering to Unveal the Relationship Between Sleep Efficiency and Caffeine Consumption</b>, 2023, Code: <a href= "https://github.com/mbeaty2/Introduction-to-Data-Science/blob/main/Assignment%203.ipynb">https://github.com/mbeaty2/Introduction-to-Data-Science/blob/main/Assignment%203.ipynb</li></a>
+            <li><b>LSTM Classification of Real and Fake News Articles</b>, 2022, Code: <a href= "https://github.com/mbeaty2/Natural-Language-Processing/blob/main/NLP%20Final%20Project_MBeaty.ipynb">https://github.com/mbeaty2/Natural-Language-Processing/blob/main/NLP%20Final%20Project_MBeaty.ipynb</li></a>
             <h2 id="professional">Professional activities</h2>
             <hr>
-            <li><b>Student representative</b>, Creative Computing Instute, September 2022 - Present.</li>
-            <li><b>Student representative</b>, Teeside University, September 2017 - June 2019.</li>
+            <li><b>Student representative</b>, Creative Computing Institute, September 2022 - Present.</li>
+            <li><b>Ada Lovelace Seminar</b>, University of Warwick & Alan Turing Institute, March 2023</li>
+            <li><b>Rendering Utopias Workshop</b>, Feminist Internet & UAL Creative Computing Institute, February 2023</li>
             <h2 id="award">Awards and honours</h2>
             <hr>
-            <li><b>Most creative project</b>, UAL Hackathon, 2023.</li>
+            <li><b>AWS DeepRacer Student Competition Awardee</b>, Amazon Web Services, 2023.</li>
+            <li><b>Postgraduate Excellence Scholarship</b>, UAL Creative Computing Institute, 2023.</li>
+            <li><b>Staff Excellence Award</b>, University of Wisconsin - Madison, 2022.</li>
+            <li><b>Academic Excellence Scholarship</b>, University of Wisconsin - Madison, 2016-2020.</li>
+            <li><b>Hex-U Humanities Fellowship</b>, University of Wisconsin - Madison, 2020.</li>
+            <li><b>Louise Troxell “Outstanding Female Student” Award Nomination</b>, University of Wisconsin - Madison, 2019.</li>
+            <li><b>Vicky Lee Hirsch Endowment for Conservation Scholarship</b>, University of Wisconsin - Madison, 2016.</li>
+    
             <h2 id="hobbies">Hobbies</h2>
             <hr>
-            <p>I love bouldering and regularly go climbing with the <a href="https://www.arts-su.com/yourcommunities/clubs/club/ualclimbing/">UAL Climbing Society</a> on indoor bouldering walls and we have been on some climbing trips to the Yorkshire dales and Devon. In my spare time I knit hats and sell them on <a href="https://www.etsy.com/uk/">etsy</a>. I am also a big Dulwich Hamlet fan and regularly go to cheer them on!</p>
+            <p>As someone with innate curiosity, I enjoy several extracurricular activities. I am particularly fond of baking and reading, which I explore as an active member of the <a href="https://www.arts-su.com/communities/groups/societies/group/6173/">UAL Book Club.</a> Traveling is another passion of mine, having visited Scotland, France, and Argentina, but hoping to continue my adventures throughout Europe and Southeast Asia. In my spare time, I find solace in knitting and channeling my creativity as a freelance graphic designer. However, my true passion lies in the captivating realm of space exploration. I am constantly engrossed in learning about quantum mechanics, black holes, and string theory: eager to share my knowledge with others and ignite their curiosity.</p>
           <!--End Projects-->
         </div>
       </div>
