--- a/menu.html
+++ b/menu.html
@@ -1,15 +1,15 @@
 <div class="menu">
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
-      <a href="index.html">CCI Student</a>
+      <a href="index.html">Marissa Beaty</a>
     </div>
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
       <img class="noselect" src="img/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a href="file/cv-template.pdf">CV</a>
-      <a href="http://www.linkedin.com/pub/cci-student">LinkedIn</a>
-      <a href="http://github.com/cci-student">GitHub</a>
+      <a href="file/MBeaty_CV.pdf">CV</a>
+      <a href="https://www.linkedin.com/in/marissa-beaty-983280160/">LinkedIn</a>
+      <a href="https://github.com/mbeaty2">GitHub</a>
     </div>
   </div>
 </div>
