--- a/index.html
+++ b/index.html
@@ -181,6 +181,43 @@
 
   <!-- SQL Examples -->
 
+  <section class="sql" id="sql">
+    <h2 class="sql-title">Data Exploration with SQL</h2>
+    <div class="sql-container">
+      <div class="sql-card">
+        <i class="fa-solid fa-gamepad" style="color: #ff6251;"></i>
+        <h3 class="sql-title">When Was the Golden Age of Video Games?</h3>
+        <p class="sql-details">
+          This project utilizes a dataset from Kaggle, accessible at <a href="https://www.kaggle.com/datasets/holmjason2/videogamedata" target="_blank">this link</a>, to delve into the world of video games by examining several key aspects. It began by identifying the top ten best-selling video games, shedding light on the titles that have captured the gaming market's imagination. Additionally, the project delved into the years that received the most acclaim from video game critics, identifying trends and anomalies within these 'golden' years. Furthermore, it analyzed the years when certain video game releases appeared to drop off the critics' favorites list, potentially unveiling shifts in industry preferences. Finally, the project also delved into the sales data of the best video game years, offering insights into the financial successes that coincide with critical acclaim in the gaming world.
+        </p>
+        <a href="https://public.tableau.com/views/Seinfelddata/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      <div class="sql-card">
+        <i class="fa-solid fa-briefcase" style="color: #e63b7a;"></i>
+        <h3 class="sql-title">What and Where are the World’s Oldest Businesses?</h3>
+        <p class="sql-details">
+          This SQL project embarked on an exploration of historical business data, <a href="https://businessfinancing.co.uk/the-oldest-company-in-almost-every-country/" target="_blank">available here</a>, initially distinguishing between businesses founded before and after the year 1000. This allowed for insights into the longevity and evolution of enterprises over time. Additionally, the project delved into categorizing businesses by continent, providing a comprehensive view of the distribution of various industries across the world. To further refine the analysis, the project implemented filters to focus on specific counts of businesses by both continent and category, enabling a detailed examination of the global business landscape by region and industry.
+        <a href="https://github.com/mbeaty2/working_with_sql/tree/main/What and Where are the World's Oldest Businesses" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      <div class="sql-card">
+        <i class="fa-solid fa-medal" style="color: #ffc677;"></i>
+        <h3 class="sql-title">Optimizing Online Sports Retail Revenue</h3>
+        <p class="sql-details">
+          This SQL project revolved around a comparative analysis of pricing strategies employed by major sports brands through a dataset <a href="https://businessfinancing.co.uk/the-oldest-company-in-almost-every-country/" target="_blank">available here</a>. By examining their respective product prices, the project aimed to uncover patterns and disparities in their market positioning. Additionally, the project included a task of labeling price ranges, making it easier to categorize and compare the product offerings of both companies. Furthermore, the project explored the correlation between revenue and customer reviews, providing insights into the relationship between financial success and product quality. Lastly, the project organized and visualized customer reviews by month and brand, enabling a temporal assessment of consumer sentiment and brand performance over time.
+        </p>
+        <a href="https://github.com/mbeaty2/working_with_sql/tree/main/Optimizing Online Sports Retail Revenue" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      <div class="sql-card">
+        <i class="fa-solid fa-chart-line" style="color: #9929bd;"></i>
+        <h3 class="sql-title">Analyzing International Debt Statistics</h3>
+        <p class="sql-details">
+          Using data from the world bank <a href=”https://www.worldbank.org/en/programs/debt-statistics/ids” target=”_blank”>debt statistics database</a>, this SQL project was dedicated to the analysis of global debt data, focusing on various aspects of the financial state of countries. It began by calculating the total amount of debt owed by the countries listed in the dataset, providing a comprehensive view of the combined global debt burden. Additionally, the project identified the country with the highest amount of debt, presenting both the name of the country and the specific debt figure. Furthermore, the project computed the average amount of debt owed by countries across different debt indicators, allowing for a more nuanced understanding of debt patterns and trends in the dataset.
+        </p>
+        <a href="https://github.com/mbeaty2/working_with_sql/tree/main/Analyze International Debt Statistics" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+  </section>
+
   <!-- Contact-->
     <section class="contact" id="contact">
       <h2>Get In Touch</h2>
